# tempo2

./: BTmodel.C  DDGRmodel.C  DDmodel.C  Makefile.am  calculate_bclt.C  clkcorr.C  configure.ac  constraints_nestlike.C  dm_delays.C  doconfigure  formResiduals.C  ifunc.C  initialise.C  jpleph.c  preProcess.C  preProcessSimple.C  readParfile.C  shapiro_delay.C  t2fit.C  t2fit.h  t2fit_dmother.C  t2fit_dmother.h  t2fit_nestlike.C  t2fit_nestlike.h  t2fit_stdFitFuncs.C  tai2ut1.C  tempo2.C  tempo2.h  textOutput.C  units.C
T2runtime/clock/: gps2gps_usno.clk  gps_unso2utc.clk  gps_usno2utc.clk  gpst2utc.clk  jb422jb.clk  jb422jbafb.clk  ncyobs2obspm.clk  obspm2gps.clk  pks2gps.clk  tai2tt_bipm2020.clk  tai2tt_bipm2022.clk  tai2tt_bipm2023.clk
T2runtime/earth/: eopc04_IAU2000.62-now  update_eop.sh
plugin/: GWanisobkgrd_plug.C  GWbkgrd_plug.C  GWdipolebkgrd_plug.C  detectGWB_plug.C  detectGWBnew_plug.C  exportres_plug.C  fake_plug.C  fermi_plug.C  fixData_plug.C  flagOutliers_plug.C  plk_plug.C  quickplot_plug.C  storeTNDM_plug.C
plugin/plugin_lists/: vanilla.plugins
python/clock_updater/: update_clock.py
python/t2pred/: t2pred.pyx  t2pred_loops.c  t2pred_loops.h
tests/: Makefile.am
unsupported_plugins/toasim/: Makefile.am  addChromVar_plug.C  addDmVar_plug.C  addGWB_plug.C  addRedNoise_plug.C  makeRedNoise.C  makeRedNoise.h
